Fix code review issues: JSON handling, POI DataFormatter, slot location
- Use ObjectMapper for safe gap_json array manipulation instead of
  string concatenation
- Use DataFormatter for robust Excel cell value reading
- Derive TeacherSlotResponse location from appointment data

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>